[workspace]
members = [
    "crates/bevy_tokio_tasks",
    "crates/web_server",
    "crates/async_bevy_web",
    "crates/bevy_framepace"
]
exclude = [
    "crates/example_app",
    # "crates/example-ssr-app",
]

resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
bevy_ecs = {version = "0.13"}
bevy_app = {version = "0.13"}
