[workspace]
members = [
    "crates/bevy_tokio_tasks",
    "crates/async_bevy_web",
    "crates/bevy-leptos",
    "crates/abw_macros"
    ]
exclude = [
    "examples",
    "crates/bevy_leptos",
    "crates/example_app",
]

resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
bevy = {version = "0.17.0", default-features = false}
