[package]
name = "async-bevy-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true

bevy-tokio-tasks = {path = "../bevy_tokio_tasks", optional = true}
bevy_framepace = {path = "../bevy_framepace", optional = true}
bevy-leptos = {path = "../bevy_leptos"}

tokio = { version = "1", features = ["rt-multi-thread"] , optional = true}

[features]
development= []
generator = [
    "dep:bevy-tokio-tasks",
    "dep:bevy_framepace",
    "dep:tokio",
    "bevy-leptos/generator"
    ]
ron = ["bevy-leptos/ron"]
markdown = ["bevy-leptos/markdown"]
