[package]
name = "async-bevy-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_core = {version="0.13"}
bevy_time = {version="0.13"}

bevy-tokio-tasks = {path = "../bevy_tokio_tasks"}
bevy_framepace = {path = "../bevy_framepace"}
bevy-leptos = {path = "../bevy-leptos"}

[features]
default=[]
