[package]
name = "async-bevy-web"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }

bevy-tokio-tasks = {path = "../bevy_tokio_tasks"}
bevy-leptos = {path = "../bevy-leptos"}

[features]
default=[]
