[package]
name = "bevy_framepace"
version = "0.15.0"
edition = "2021"
resolver = "2"
description = "Frame pacing and frame limiting for Bevy"
license = "MIT OR Apache-2.0"
# repository = "https://github.com/aevyrie/bevy_framepace"
documentation = "https://docs.rs/bevy_framepace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_diagnostic = "0.15"
bevy_log = "0.15"
bevy_reflect = "0.15"
bevy_time = "0.15"
bevy_utils = "0.15"
# Non-bevy
spin_sleep = "1.0"

[features]
default = ["framepace_debug"]
framepace_debug = []