[package]
name = "bevy-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
bevy_ecs.workspace = true
bevy_app.workspace = true
# leptos = { version = "0.6", features = ["experimental-islands"] }
leptos = { version = "0.6" }
leptos_meta = { version = "0.6" }

axum = {version = "0.7.4", features = ["ws"], optional = true}
axum-macros = {version = "0.4", optional = true}
axum-extra = {version="0.9.2", features=["typed-header"], optional = true}
tokio = { version = "1.33.0", features = ["full"], optional = true }
tower = { version = "0.4.13", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["full"], optional = true }
# leptos_axum = { version = "0.6", features = ["experimental-islands"], optional = true }
leptos_axum = { version = "0.6", optional = true }
leptos_router = { version = "0.6", optional = true }
tokio-util = {version = "0.7", features = ["rt"], optional = true }
tracing-subscriber = {version = "0.3.18", optional = true}
tokio-tungstenite = {version = "0.21", optional = true}
tracing = {version = "0.1.40", optional = true}
futures ={version = "0.3", optional = true}
futures-util = {version = "0.3.30", default-features = false, features = ["sink","std"], optional = true}
headers = {version="0.4.0", optional = true}

bevy-tokio-tasks = {path = "../bevy_tokio_tasks", optional = true}

serde_json = "1.0.114"
serde = { version = "1", features = ["derive"], optional = true }
ron = { version = "0.8.1", optional = true}
gray_matter = { version = "0.2.6", optional = true }
pulldown-cmark = { version = "0.10.2", optional = true }

[features]
generator = [
    "dep:axum", 
    "dep:axum-extra", 
    "dep:axum-macros",
    "dep:tokio", 
    "dep:tower", 
    "dep:tower-http", 
    "dep:leptos_axum", 
    "dep:leptos_router", 
    "dep:tokio-util",
    "dep:tracing-subscriber",
    "dep:tokio-tungstenite",
    "dep:tracing",
    "dep:futures",
    "dep:futures-util",
    "dep:headers",
    "dep:bevy-tokio-tasks",
    ]

ron = ["dep:serde", "dep:ron"]
markdown = ["dep:serde", "dep:gray_matter", "dep:pulldown-cmark"]