# Pulled this repo from EkardNT which required updates to the bevy crates to latest 0.13.0
[package]
name = "bevy-tokio-tasks"
# Major and minor version here should match bevy's. Patch version can vary.
version = "0.13.0"
edition = "2021"
license = "CC0-1.0"
description = "Simple integration of a Tokio runtime into a Bevy app for background processing."
homepage = "https://crates.io/crates/bevy-tokio-tasks"
repository = "https://github.com/EkardNT/bevy-tokio-tasks"
keywords = ["bevy", "tokio", "async", "plugin"]
categories = ["asynchronous"]

[dependencies]
bevy_app = "0.13"
bevy_ecs = "0.13"
tokio = { version = "1", features = ["rt", "sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }