[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.0",default-features = false, features=["dynamic_linking"]}
axum = {version = "0.7.4", features = ["ws"]}
axum-extra = {version="0.9.2", features=["typed-header"]}
dotenv = "0.15.0"
headers = "0.4.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tower = {version = "0.4", features = ["util"]}
tower-http = {version = "0.5.2", features = ["fs", "trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"
futures-util = {version = "0.3.30", default-features = false, features = ["sink","std"]}
bevy-tokio-tasks = {path = "../bevy_tokio_tasks"}


[dev-dependencies]
bevy = { version = "0.13.0", default-features = false, features = ["dynamic_linking"] }
tokio = { version = "1", features = ["time"] }
