[package]
name = "example_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.17.0", default-features = false}
tokio = {version="1.36.0", features = ["rt-multi-thread", "time"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

async-bevy-web = {path = "../../crates/async_bevy_web"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1