[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

leptos-use = {version="0.16"}
codee = "0.3"

# bevy_eventwork = {git="https://github.com/vertec-io/bevy_eventwork", branch="wasm_core_features"}
shared = {path="../shared"}

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
bincode = "1.3.3"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "leptos-use/ssr",
    "leptos-use/axum",
    ]

