[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }

leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

bevy = {version = "0.17.0", default-features = false}
async-bevy-web = {path="../../../crates/async_bevy_web"}
eventwork = {git="https://github.com/vertec-io/bevy_eventwork", branch="network_workspace", package = "eventwork"}
eventwork_websockets = {git="https://github.com/vertec-io/bevy_eventwork", branch="network_workspace", package = "eventwork_websockets"}
shared = {path="../shared"}

# bincode = "1.3.3"
axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
serde = { version = "1.0", features = ["derive"] }

