[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_eventwork = {git="https://github.com/vertec-io/bevy_eventwork", branch="wasm_core_features"}
bevy_eventwork_mod_websockets = {git="https://github.com/vertec-io/bevy_eventwork_mod_websockets", branch="main"}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"