[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
eventwork_common = {git="https://github.com/vertec-io/bevy_eventwork", branch="network_workspace", package="eventwork_common"}
# bevy_eventwork_mod_websockets = {git="https://github.com/vertec-io/bevy_eventwork_mod_websockets", branch="main"}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"